@@ -22,6 +22,7 @@
 #include <glom/appwindow.h>
 #include <glom/main_local_options.h>
 #include <glom/glade_utils.h>
+#include <gtkmm/main.h>
 #include <glibmm/optioncontext.h>
 #include <iostream>
 
@@ -40,6 +41,7 @@ Application::Application()
 
 Glib::RefPtr<Application> Application::create()
 {
+  init_gtkmm();
   return Glib::RefPtr<Application>( new Application() );
 }
 
